--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "formic": "^0.0.10",
     "formik": "^2.4.5",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
