--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.0",
     "yup": "^1.3.3"
   },
