--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "formic": "^0.0.10",
     "formik": "^2.4.5",
     "next": "14.1.0",
