--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.15",
     "@types/node-cron": "^3.0.11",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.0",
     "cookie-parser": "^1.4.6",
