--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@mui/x-data-grid": "^6.19.5",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "formic": "^0.0.10",
@@ -26,6 +27,7 @@
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.0",
+    "timeago.js": "^4.0.2",
     "yup": "^1.3.3"
   },
   "devDependencies": {
