--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.0",
+    "recharts": "^2.12.1",
     "timeago.js": "^4.0.2",
     "yup": "^1.3.3"
   },
