ADD: Course Details Ui
added course/id route ui

added course details page

add getCoursedetails query

add course details for course overview without header footer

add course content list

add stripe configuration in order.controller.ts

add  keys in .env file

add stripe handling in createOrder, retrieve method helps in validating the payment information

add getStripePublishableKey and createPaymentInetent in order controller and api

updated  courseDetails page

install stripe at client side

add checkout card in stripe

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.5",
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/react-stripe-js": "^2.5.1",
+    "@stripe/stripe-js": "^3.0.6",
     "axios": "^1.6.7",
     "formic": "^0.0.10",
     "formik": "^2.4.5",
