--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.0",
     "recharts": "^2.12.1",
+    "socket.io-client": "^4.7.4",
     "timeago.js": "^4.0.2",
     "yup": "^1.3.3"
   },
