--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.15",
     "@types/node-cron": "^3.0.11",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.0",
@@ -30,6 +31,7 @@
     "mongoose": "^8.1.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.9",
+    "socket.io": "^4.7.4",
     "stripe": "^14.18.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
